CricAppUI/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-cric-ui-service
  labels:
    app: app-cric-ui-service
    name: app-cric-ui-service
spec:
  type: ClusterIP
  selector:
    app: app-cric-ui-service
  ports:
    - protocol: TCP
      port: 9000
      name: http
      targetPort: 9000
